Fixed issues with word wrap

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
     flex-direction: row;
     margin: 20px;
     gap: 25px;
+    flex-wrap: wrap;
 }
 
 .header {
@@ -88,13 +89,18 @@ li {
 }
 
 .project-box {
-    width: 25%;
+    width: 15%;
     border: 2px solid darkcyan;
     padding: 50px;
     margin: 20px;
+    word-wrap: break-word;
 }
 
-.project-box-image{
+.project-box-image {
     width: 100%;
     height: 50%;
+}
+
+.aboutMe{
+    float: left;
 }
